# Citadel-OS

./: CMakeLists.txt  README.md  build.bash  build.ps1  clean.ps1  configure.bash  debug.ps1  limine.conf  linker.ld  run.bash  run.ps1
limine/: limine
src/: boot.asm  filesystem.c  filesystem.h  kernel.c  keyboard.c  keyboard.h  limine.c  shell.c  tty.c  tty.h  utils.c  utils.h
src/drivers/: keyboard.c  keyboard.h  tty.c  tty.h
src/kernel/: kernel.c
